[package]
name = "json-lsp-hz"
version = "0.1.0"
edition = "2021"
author = "shnarazk@github.com"

[dependencies]
dashmap = "5.5"
lsp-types = "^0.97"
ropey = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "^1.0"
tower-lsp = "^0.20"
tokio = { version = "1", features = ["full"] }
